--- a/src/themes/default-procc/resource/i18n/en-US.csv
+++ b/src/themes/default-procc/resource/i18n/en-US.csv
@@ -639,6 +639,7 @@
 "Your shopping cart is empty.","Your shopping cart is empty."
 "Don"t hesitate and","Don"t hesitate and"
 "My shipping details","My shipping details"
-"Can you make amazing photos? Sign up as a CC!","Can you make amazing photos? Sign up as a CC!"
+"Can you make amazing photos?","Can you make amazing photos?"
+"Sign up as a CC!","Sign up as a CC!"
 "Sign Up","Sign Up"
 
