Adding Search Filter in Home.vue -> AvailableStores.vue

--- a/core/i18n/resource/i18n/bg-BG.csv
+++ b/core/i18n/resource/i18n/bg-BG.csv
@@ -67,7 +67,7 @@
 "We are sorry, there is no Internet connection. You can still place your order. We will notify you when we are back online if any of the ordered products are out of stock.","Съжаляваме, нямаме връзка с интернет. Все още можете да направите поръчката си. В момента не можем да проверим дали някой от поръчаните продукти е изчерпан. Ще ви уведомим при първа възможност!"
 "This feature is not implemented yet!","Тази функция все още не е активна!"
 "Thumbnail","Умалено изображение"
-"Type what you are looking for...","Въведете това, което търсите ..."
+"What are you looking for?","Какво търсите?"
 "Unexpected authorization error. Check your Network conection.","Неочаквана грешка в авторизацията. Проверете мрежовото си свързване."
 "Unhandled error, wrong response format!","Неоправена грешка, грешен формат на отговора!"
 "Vue Storefront"," Mагазин"
