--- a/core/i18n/resource/i18n/cs-CZ.csv
+++ b/core/i18n/resource/i18n/cs-CZ.csv
@@ -56,7 +56,7 @@
 "We are sorry, there is no Internet connection. You can still place your order. We will notify you when we are back online if any of your ordered products are out of stock.","Připojení k internetu není k dispozici. Stále si však můžete zboží objednat. Budeme vás informovat v případě, že některý z objednaných produktů není k dispozici, protože to v současnosti nelze zkontrolovat."
 "This feature is not implemented yet!","Tato funkce zatím nebyla zavedena!"
 "Thumbnail","Thumbnail"
-"Type what you are looking for...","Zadejte, co hledáte..."
+"What are you looking for?","Zadejte, co hledáte..."
 "Unhandled error, wrong response format!","Neošetřená chyba, nesprávný formát odpovědi!"
 "You are logged in!","Jste přihlášeni!"
 "You are to pay for this order upon delivery.","Tuto objednávku platíte při doručení."
