--- a/core/i18n/resource/i18n/de-DE.csv
+++ b/core/i18n/resource/i18n/de-DE.csv
@@ -62,7 +62,7 @@
 "We are sorry, there is no Internet connection. You can still place your order. We will notify you when we are back online if any of your ordered products are out of stock.","Es besteht aktuell keine Verbindung zum Internet. Sie können ihre Bestellung dennoch aufgeben. Falls eines der bestellten Produkte bei Wiederaufbau der Verbindung nicht mehr verfügbar sein sollte, werden wir Sie umgehend benachrichtigen."
 "This feature is not implemented yet!","Diese Funktion wurde noch nicht implementiert."
 "Thumbnail","Thumbnail"
-"Type what you are looking for...","Geben Sie ein, wonach Sie suchen..."
+"What are you looking for?","Geben Sie ein, wonach Sie suchen..."
 "Unhandled error, wrong response format!","Unbehandelter Fehler. Die Antwort vom Server ist falsch formatiert!"
 "You are logged in!","Du wurdest eingeloggt!"
 "You are to pay for this order upon delivery.","Sie müssen bei Lieferung bezahlen."
