--- a/core/i18n/resource/i18n/en-US.csv
+++ b/core/i18n/resource/i18n/en-US.csv
@@ -67,7 +67,7 @@
 "We are sorry, there is no Internet connection. You can still place your order. We will notify you when we are back online if any of your ordered products are out of stock.","There is no Internet connection. You can still place your order. We will notify you if any of ordered products is not avaiable because we cannot check it right now."
 "This feature is not implemented yet!","This feature is not implemented yet!"
 "Thumbnail","Thumbnail"
-"Type what you are looking for...","Type what you are looking for..."
+"What are you looking for?","What are you looking for?"
 "Unexpected authorization error. Check your Network conection.","Unexpected authorization error. Check your Network conection."
 "Unhandled error, wrong response format!","Unhandled error, wrong response format!"
 "Vue Storefront", "Vue Storefront"
