--- a/core/i18n/resource/i18n/es-ES.csv
+++ b/core/i18n/resource/i18n/es-ES.csv
@@ -36,7 +36,7 @@
 "There is no Internet connection. You can still place your order. We will notify you if any of ordered products is not avaiable because we cannot check it right now.","No hay conexión a internet. Todavía puedes hacer tu pedido. Le notificaremos si alguno de los productos solicitados no están disponible porque no podemos verificarlo ahora mismo."
 "This feature is not implemented yet!","¡Esta característica aún no está implementada!"
 "Thumbnail","Thumbnail"
-"Type what you are looking for...","Escribe lo que estás buscando..."
+"What are you looking for?","Escribe lo que estás buscando..."
 "Unhandled error, wrong response format!","¡Error no controlado, formato de respuesta incorrecto!"
 "You are logged in!","¡Has iniciado sesión!"
 "You need to be logged in to see this page","Necesitas iniciar sesión para ver esta página"
