--- a/core/i18n/resource/i18n/et-EE.csv
+++ b/core/i18n/resource/i18n/et-EE.csv
@@ -26,7 +26,7 @@
 "Please fix the validation errors","Palun parandage valideerimise vead"
 "The product price is unknown and cannot be added to Cart!","Tootel puudub hind. Toodet ei saa ostukorvi lisada."
 "My Account","Minu konto"
-"Type what you are looking for...",Otsi…
+"What are you looking for?",Otsi…
 "Home Page",Esileht
 Checkout,Ostuvormistamine
 "Subtotal incl. tax","Kokku (sisaldab käibemaksu)"
