--- a/core/i18n/resource/i18n/fr-FR.csv
+++ b/core/i18n/resource/i18n/fr-FR.csv
@@ -44,7 +44,7 @@
 "We are sorry, there is no Internet connection. You can still place your order. We will notify you when we are back online if any of your ordered products are out of stock.","Il n'y a pas de connexion Internet. Vous pouvez toujours passer votre commande. Nous vous informerons si l'un des produits commandés n'est pas disponible car nous ne pouvons pas le vérifier en mode hors ligne."
 "This feature is not implemented yet!","Cette fonctionnalité n'est pas encore implémentée!"
 "Thumbnail","Thumbnail"
-"Type what you are looking for...","Saisissez votre recherche ..."
+"What are you looking for?","Saisissez votre recherche ..."
 "Unhandled error, wrong response format!","Erreur non prise en charge, format de réponse incorrect !"
 "View all","Voir tout"
 "You are logged in!","Vous êtes authentifié !"
