--- a/core/i18n/resource/i18n/pt-PT.csv
+++ b/core/i18n/resource/i18n/pt-PT.csv
@@ -39,7 +39,7 @@
 "We are sorry, there is no Internet connection. You can still place your order. We will notify you when we are back online if any of your ordered products are out of stock.","Sem ligação à Internet. Mas pode finalizar o seu pedido. Assim que possível iremos notifica-lo caso algum dos produtos solicitados não estiverem disponíveis."
 "This feature is not implemented yet!","Esta funcionalidade ainda não foi implementada!"
 "Thumbnail","Thumbnail"
-"Type what you are looking for...","Escreva o que está procurando..."
+"What are you looking for?","Escreva o que está procurando..."
 "Unhandled error, wrong response format!","Erro desconhecido, formato de resposta errado!"
 "You are logged in!","Você está com sessão inicializada!"
 "You need to be logged in to see this page","Precisa de iniciar sessão para ver esta página"
