--- a/core/i18n/resource/i18n/ru-RU.csv
+++ b/core/i18n/resource/i18n/ru-RU.csv
@@ -36,7 +36,7 @@
 "We are sorry, there is no Internet connection. You can still place your order. We will notify you when we are back online if any of your ordered products are out of stock.","Отсутствует соединение к интернету. Однако вы можете оформить заказ. Мы уведомим Вас об отсутствии какого-либо из заказанных товаров позднее, так как не можем проверить это в данный момент."
 "This feature is not implemented yet!","Данная возможность пока не реализована!"
 "Thumbnail","Thumbnail"
-"Type what you are looking for...","Введите то что Вы ищите..."
+"What are you looking for?","Введите то что Вы ищите..."
 "Unhandled error, wrong response format!","Необработанная ошибка, неверный формат ответа!"
 "You are logged in!","Вы авторизовались!"
 "You need to be logged in to see this page","Вы должны войти в систему, чтобы увидеть эту страницу"
