--- a/core/i18n/resource/i18n/zh-cn.csv
+++ b/core/i18n/resource/i18n/zh-cn.csv
@@ -57,7 +57,7 @@
 "We are sorry, there is no Internet connection. You can still place your order. We will notify you when we are back online if any of your ordered products are out of stock.","网络连接不上 我们现在无法确认库存。但是您仍然可以下订单， 如果订购的产品有问题，我们会通知您。"
 "This feature is not implemented yet!","此功能尚未实现！"
 "Thumbnail","Thumbnail"
-"Type what you are looking for...","请输入你想要查找的关键词..."
+"What are you looking for?","请输入你想要查找的关键词..."
 "Unhandled error, wrong response format!","未处理的错误，错误的响应格式!"
 "You are logged in!","您已成功登录!"
 "You are to pay for this order upon delivery.","您需要在收货时支付此订单."
