--- a/src/themes/default-procc/resource/i18n/bg-BG.csv
+++ b/src/themes/default-procc/resource/i18n/bg-BG.csv
@@ -639,4 +639,5 @@
 "Can you make amazing photos?","Можеш ли да правиш красиви снимкит?"
 "Sign up as a CC!","Регистрирай се като CC!"
 "Sign Up","Регистрация"
+"All Stores","Всички Магазини"
 
