--- a/src/themes/default-procc/resource/i18n/en-US.csv
+++ b/src/themes/default-procc/resource/i18n/en-US.csv
@@ -642,4 +642,5 @@
 "Can you make amazing photos?","Can you make amazing photos?"
 "Sign up as a CC!","Sign up as a CC!"
 "Sign Up","Sign Up"
+"All Stores","All Stores"
 
