--- a/core/i18n/resource/i18n/it-IT.csv
+++ b/core/i18n/resource/i18n/it-IT.csv
@@ -70,7 +70,7 @@
 "We are sorry, there is no Internet connection. You can still place your order. We will notify you when we are back online if any of your ordered products are out of stock.","Non sei connesso ad internet ma puoi ugualmente procedere con l'ordine. Non è possibile verificare adesso la disponibilità dei prodotti, se qualcuno dei prodotti ordinati non sarà più disponibile te lo faremo sapere."
 "This feature is not implemented yet!","Questa funzionalità non è ancora stata implementata!"
 "Thumbnail","Miniatura"
-"Type what you are looking for...","Cerca nel catalogo..."
+"What are you looking for?","Cerca nel catalogo..."
 "Unexpected authorization error. Check your Network conection.","Errore di autorizzazione inaspettato. Verifica la tua connesione."
 "Unhandled error, wrong response format!","Errore inatteso, formato della risposta non valido!"
 "Vue Storefront", "Vue Storefront"
