--- a/core/i18n/resource/i18n/pl-PL.csv
+++ b/core/i18n/resource/i18n/pl-PL.csv
@@ -44,7 +44,7 @@
 "We are sorry, there is no Internet connection. You can still place your order. We will notify you when we are back online if any of your ordered products are out of stock.","Brak połączenia z Internetem. Możesz nadal złożyć zamówienie. Poinformujemy Cię jeśli któryś z produktów nie będzie dostępny."
 "This feature is not implemented yet!","Wybrana opcja jest niedostępna!"
 "Thumbnail","Miniaturka"
-"Type what you are looking for...","Znajdź..."
+"What are you looking for?","Znajdź..."
 "Unhandled error, wrong response format!","Nieobsługiwany błąd, nieprawidłowy format odpowiedzi!"
 "You are logged in!","Jesteś zalogowany!"
 "You need to be logged in to see this page","Musisz być zalogowany, aby zobaczyć tę stronę"
