--- a/core/i18n/resource/i18n/pt-BR.csv
+++ b/core/i18n/resource/i18n/pt-BR.csv
@@ -39,7 +39,7 @@
 "We are sorry, there is no Internet connection. You can still place your order. We will notify you when we are back online if any of your ordered products are out of stock.","Sem conexão de Internet. Você ainda pode finalizar seu pedido. Assim que possível o notificaremos se os produtos solicitados não estiverem disponíveis."
 "This feature is not implemented yet!","Essa funcionalidade não foi implementada ainda!"
 "Thumbnail","Thumbnail"
-"Type what you are looking for...","Digite o que você está buscando..."
+"What are you looking for?","Digite o que você está buscando..."
 "Unhandled error, wrong response format!","Erro desconhecido, formato de retorno errado!"
 "You are logged in!","Você está conectado!"
 "You need to be logged in to see this page","Você precisa estar logado para ver esta página"
