--- a/core/i18n/resource/i18n/bg-BG.csv
+++ b/core/i18n/resource/i18n/bg-BG.csv
@@ -1,7 +1,7 @@
 " is out of stock!"," не е налично!"
 "404 Page Not Found","404 Страницата не е намерена"
 "Account data has successfully been updated","Данните на профила бяха обновени успешно"
-"Add review","Добавете отзив"
+"Add review","Сподели своето мнение"
 "Adding a review ...","Добавяне на отзив ..."
 "The address provided in checkout contains invalid data. Please check if all required fields are filled in and also contact us on {email} to resolve this issue for future. Your order has been canceled.","Адресът, предоставен при плащане, съдържа невалидни данни. Моля, проверете дали всички задължителни полета са попълнени и също така се свържете с нас на {имейл}, за да разрешите този проблем за вбъдеще. Поръчката ви е анулирана."
 "Enable order notification","Активиране на известия за поръчката"
@@ -52,8 +52,8 @@
 "Quantity must be positive integer","Количеството трябва да е положително цяло число"
 "Registering the account ...","Регистриране на акаунта ..."
 "The reset password feature does not work while offline!","Функцията за нулиране на паролата не работи, докато сте офлайн!"
-"Review","Отзив"
-"Reviews","Отзиви"
+"Review","Коментар"
+"Reviews","Мнения"
 "Select 0","Изберете 0"
 "Select 1","Изберете 1"
 "Shopping cart is empty. Please add some products before entering Checkout","Количката е празна. Моля, добавете продукти, преди да влезете в Плащане"
@@ -93,12 +93,12 @@
 "hip","ханш"
 "length","дължина"
 "New Product Arrivals","Нови продукти"
-"Available soon","Очаква се скоро"
+"Available soon","Очаквайте скоро"
 "Login / Registration","Вход/Регистрация"
 "Shipping Total Cost","Доставка Обща стойност"
 "EKONT","Еконт"
 "Rapido","Рапидо"
-"Limited quantity available","Ограничено налично количество"
+"Limited quantity available","Ограничено количество"
 "Address","Адрес"
 "Billing Address","Адрес за фактуриране"
 "Shipping Methods","Методи за доставка"
@@ -407,7 +407,7 @@
 "Please Wait...","Моля Изчакайте..."
 "Shipping Address","Адрес за доставка"
 "FAQ","ЧЗВ"
-"Suggested Products","Предложени продукти"
+"Suggested Products","Нашите предложения"
 "Shipping Fee","Такса Доставка"
 "VAT (Included)","с ДДС"
 "Home","Начало"
