--- a/src/themes/default-procc/resource/i18n/bg-BG.csv
+++ b/src/themes/default-procc/resource/i18n/bg-BG.csv
@@ -2,8 +2,8 @@
 "Add a discount code","Добавете код за отстъпка"
 "Add discount code","Приложи"
 "Add to cart","Добави в кошницата"
-"Add to compare","Добавете за сравнение"
-"Add to favorite","Добави в Любими"
+"Add to compare","Добави за сравнение"
+"Add to favorite","Добави в любими"
 "Enable order notification","Enable order notification"
 "Are you sure you would like to remove all the items from the shopping cart?","Наистина ли искате да премахнете всички артикули от кошницата?"
 "Are you sure you would like to remove all the items from the wishlist?","Наистина ли искате да премахнете всички артикули от списъка с желания?"
@@ -18,7 +18,7 @@
 "Choose your country","Изберете вашата държава"
 "City *","Град *"
 "City","Град"
-"Clear cart","Изчисти кошницата"
+"Clear cart","Изпразни количка"
 "Clear filters","Изчисти филтрите"
 "Clear wishlist","Изчисти Любими"
 "Clear","Изчисти"
@@ -28,7 +28,7 @@
 "Company name *","Име на фирмата *"
 "Compare products","Сравни продуктите"
 "Confirm your order","Потвърдете поръчката си"
-"Contact us","Свържете се с нас"
+"Contact us","Връзка с нас"
 "Continue to payment","Продължи към плащане"
 "Continue to shipping","Продължи към изпращане"
 "My billing address is the same","Адресът ми за фактуриране е същият"
@@ -66,14 +66,14 @@
 "Filter by categories","Филтър по категории"
 "Filter","Филтър"
 "Filters","Филтри"
-"First name *","Първо име *"
-"First name","Първо име *"
+"First name *","Име *"
+"First name","Име"
 "Forgot the password?","Забравена парола?"
 "General agreement","Общо споразумение"
 "German","Немски"
 "Germany","Германия"
 "Get inspired","Вдъхновете се"
-"Send feedback","Изпратете отзиви"
+"Send feedback","Изпрати мнение"
 "Go review the order","Отидете да прегледате поръчката"
 "Go to Facebook","Отиди във Facebook"
 "Go to Instagram","Отиди в Instagram"
@@ -127,7 +127,7 @@
 "No products found!","Няма намерени продукти!"
 "No products yet","Няма продукти"
 "No results were found.","Няма намерени резултати."
-"No reviews have been posted yet. Please don't hesitate to share Your opinion and write the first review!","Все още няма публикувани отзиви. Моля, не се колебайте да споделите мнението си и да напишете първото ревю!"
+"No reviews have been posted yet. Please don't hesitate to share Your opinion and write the first review!","Все още няма публикувани мнения. Моля, не се колебайте да споделите Вашето."
 "Open Menu","Отвори Меню"
 "Open micro cart","Отвори количката"
 "Open my account","Отвори моя акаунт"
@@ -178,8 +178,8 @@
 "Return to shopping","Връщане към пазаруване"
 "Returns","Върнати"
 "Review order","Преглед на поръчката"
-"SKU","Индекс код"
-"SKU: {sku}","Индекс: {sku}"
+"SKU","Арт. номер"
+"SKU: {sku}","Арт. номер: {sku}"
 "Safety","Безопасност"
 "Sale","Разпродажба"
 "Search","Търсене"
@@ -225,7 +225,7 @@
 "To finish the order just come back to our store while online. Your order will be sent to the server as soon as you come back here while online and then confirmed regarding the stock quantities of selected items","To finish the order just come back to our store while online. Your order will be sent to the server as soon as you come back here while online and then confirmed regarding the stock quantities of selected items"
 "Toggle password visibility","Превключване на видимостта на паролата"
 "Track my order","Проследяване на поръчката"
-"Type your opinion","Въведете вашето мнение"
+"Type your opinion","Напишете вашето мнение"
 "Type","Тип"
 "Unfortunately, we can't find the page you are looking for.","За съжаление не можем да намерим страницата, която търсите."
 "United States","САЩ"
@@ -293,10 +293,11 @@
 "You will receive an email at","Ще получите имейл на",
 "confirming your order.","потвърждавайки Вашата поръчка",
 "You can check the status of the order using your account Order History","Можете да проверите статуса на поръчката си чрез История на поръчките",
-"Store your order details in your ProCC Account","Съхранявайте данните за Вашите поръчки в ProCC профила си",
+"Store your order details in your ProCC Account","Съхранявайте детайлите за Вашите поръчки в ProCC профила си",
 "Save my Address Details","Запази данните ми за доставка",
 "Save my Payment Information in accordance with ProCC's Privacy Policy","Запази информацията ми за плащане в съответствие с Политиката за поверителност на ProCC"
 "Save to Account","Запазване в профила"
+"You will receive another confirmation email at shipping. If you have any questions, see our","Ще получите още един имейл за потвърждение при изпращане. Ако имате някакви въпроси, вижте нашите"
 "feedbackSaved","Благодаря Ви"
 "An account for {email} already exists.","Профилът за {email} вече съществува."
 
