Added Free Shipping Banner and Calculation as per the new values shipping_method.offer_free_shipping and free_shipping_amount

--- a/core/i18n/resource/i18n/bg-BG.csv
+++ b/core/i18n/resource/i18n/bg-BG.csv
@@ -36,17 +36,17 @@
 "Please fix the validation errors","Моля, поправете грешките при валидиране"
 "Please select the field which You like to sort by","Моля, изберете полето, по което искате да сортирате"
 "Please wait ...","Моля, Изчакайте ..."
-"Proceed to checkout","Продължете към плащане"
+"Proceed to checkout","Доставка"
 "Processing order...","Поръчката се обработва ..."
 "The product has been added to Cart!","Продуктът е добавен в кошницата!"
 "The product price is unknown and cannot be added to Cart!","Цената на продукта е неизвестна и той не може бъде добавен в кошницата!"
-"The product quantity has been updated!","Количеството на продукта е обновено!"
+"The product quantity has been updated!","Продуктът е добавен!"
 "Product {productName} has been added to Compare!","Продуктът {productName} е добавен за сравнение!"
 "Product {productName} has been added to Wishlist!","Продуктът {productName} е добавен към списъка с желания!"
 "Product {productName} has been removed from Compare!","Продуктът {productName} е премахнат от сравнението!"
 "Product {productName} has been removed from Wishlist!","Продуктът {productName} е премахнат от списъка с желания!"
-"Quantity (offline mode)","Количество (офлайн режим)"
-"Quantity ({qty} available)","Количество ({qty} налични)"
+"Quantity available offline","Количество (офлайн режим)"
+"Quantity available","Количество ({qty} налични)"
 "Quantity must be above 0","Количеството трябва да е над 0"
 "Quantity must be below {quantity}","Количеството трябва да бъде под {количество}"
 "Quantity must be positive integer","Количеството трябва да е положително цяло число"
