--- a/src/themes/default-procc/resource/i18n/bg-BG.csv
+++ b/src/themes/default-procc/resource/i18n/bg-BG.csv
@@ -29,8 +29,8 @@
 "Compare products","Сравни продуктите"
 "Confirm your order","Потвърдете поръчката си"
 "Contact us","Връзка с нас"
-"Continue to payment","Продължи към плащане"
-"Continue to shipping","Продължи към изпращане"
+"Continue to payment","Към плащане"
+"Continue to shipping","Към изпращане"
 "My billing address is the same","Адресът ми за фактуриране е същият"
 "Country *","Държава *"
 "Country","Държава"
@@ -77,7 +77,7 @@
 "Go to Instagram","Отиди в Instagram"
 "Go to Pinterest","Отиди в Pinterest"
 "Go to Youtube","Отиди в Youtube"
-"Go to checkout","Отиди в Плащане"
+"Go to checkout","Плащане"
 "Help","Помощ"
 "Home","Начало"
 "House/Apartment","Къща/Апартамент"
@@ -176,8 +176,8 @@
 "Return to shopping","Връщане към пазаруване"
 "Returns","Върнати"
 "Review order","Преглед на поръчката"
-"SKU","Арт. номер"
-"SKU: {sku}","Арт. номер: {sku}"
+"SKU","Арт."
+"SKU: {sku}","Арт: {sku}"
 "Safety","Безопасност"
 "Sale","Разпродажба"
 "Search","Търсене"
@@ -338,7 +338,7 @@
 "All Stores","Всички магазини"
 "List of the available ProCC Store Brands","Списък на наличните брандове в ProCC"
 "noImage","Няма Изображение"
-"Shipping & Handling","Доставка & Обработка"
+"Shipping & Handling","Доставка"
 "Bulgaria","България"
 "Configure","Конфигуриране"
 "Contacts","Контакти"
@@ -640,5 +640,8 @@
 "Can you make amazing photos?","Можеш ли да правиш красиви снимкит?"
 "Sign up as a CC!","Регистрирай се като CC!"
 "Sign Up","Регистрация"
+"Description","Описание"
+"Product Details","Продукт"
 "All Stores","Всички Магазини"
+"freeShippingBannerText","{brand_name} предлага безплатна доставка за поръчки над"
 
