--- a/src/themes/default-procc/resource/i18n/en-US.csv
+++ b/src/themes/default-procc/resource/i18n/en-US.csv
@@ -643,5 +643,8 @@
 "Can you make amazing photos?","Can you make amazing photos?"
 "Sign up as a CC!","Sign up as a CC!"
 "Sign Up","Sign Up"
+"Description","Description"
+"Product Details","Product Details"
 "All Stores","All Stores"
+"freeShippingBannerText","{brand_name} offers free delivery from"
 
